Fixed html overflow-x

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,10 @@ $white: #ffffff;
 
 $debug: #00ff00;
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: $primary-font;
     font-weight: 400;
